tests/unit/evaluation/minizinc/general/test_negated_let_bad.err_exp4
mzn2fzn:
  error: 
  test_negated_let_bad.mzn:6 
  In constraint. 
  In 'not' expression. 
  In let-variable 'y'. 
  Let-variables with no definitions cannot appear in reified contexts.
